--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-
+<h1>Making Legacy Concurrent</h1>
+  <ul>
+    <li> <a href="Designing-framework-to-support-remote-and-local-actors-transparently.html">Designing a framework to support remote and local actors transparently. </a>
+    <li> <a href="actors-vs-executors.html">Actors vs. Executors in Java</a>
+    <li> <a href="how-to-hide-sensitive-data-in-logs.html"How to hide sensitive information (like passwords) in plain-text logs</a>
+  </ul>
 </body>
 </html>
