--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <ul>
     <li> <a href="Designing-framework-to-support-remote-and-local-actors-transparently.html">Designing a framework to support remote and local actors transparently. </a>
     <li> <a href="actors-vs-executors.html">Actors vs. Executors in Java</a>
-    <li> <a href="how-to-hide-sensitive-data-in-logs.html"How to hide sensitive information (like passwords) in plain-text logs</a>
+    <li> <a href="how-to-hide-sensitive-data-in-logs.html">How to hide sensitive information (like passwords) in plain-text logs</a>
   </ul>
 </body>
 </html>
