--- a/Designing-framework-to-support-remote-and-local-actors-transparently.html
+++ b/Designing-framework-to-support-remote-and-local-actors-transparently.html
@@ -1,3 +1,8 @@
+<html>
+<head>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-default.min.css">
+  </head>
+<body>
 <div dir="ltr" style="text-align: left;" trbidi="on">
 <h2 style="text-align: left;">
 Actor Hierarchy</h2>
@@ -21,3 +26,5 @@ Notes:</h4>
 <div>
 <br /></div>
 </div>
+  </body>
+  </html>
