--- a/Simple-thoughts-on-Monads-in-Scala.html
+++ b/Simple-thoughts-on-Monads-in-Scala.html
@@ -1,4 +1,9 @@
-<i>A usual question in Scala interviews is about monads. A specific question I was asked was whether you can mix different types of monads inside one for comprehension. I had never thought about whether that makes sense or not. After that interview I repeatedly thought about it, and I want to write about it here.&nbsp;</i><br />
+<html>
+<head>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-default.min.css">
+  </head>
+<body>
+  <i>A usual question in Scala interviews is about monads. A specific question I was asked was whether you can mix different types of monads inside one for comprehension. I had never thought about whether that makes sense or not. After that interview I repeatedly thought about it, and I want to write about it here.&nbsp;</i><br />
 <br />
 But first things first. Let's first get it straight. In simple words, what is a monad?<br />
 &nbsp; &nbsp; "Consider a monad is a container. That is, it can contain some value."<br />
@@ -8,3 +13,5 @@ But why should you need a container? Why not just put the value out there? Why b
 Wait... these are all now very different scenarios. Could a single container handle all these cases? Or are there then different types of such containers?<br />
 <br />
 Well, in Scala we have different sorts of monads. But obviously, they all do share the same characteristic of <i>being a container</i>. Imagine you buy a gift and put it in a box, then wrap in gift paper. Then you put a few such gifts into another bigger box to be able to post them together. In the end, the gift itself (or all the gifts) is what matters and all those boxes and wrap paper are serving that purpose.
+  </body>
+</html>
