--- a/Designing-framework-to-support-remote-and-local-actors-transparently.html
+++ b/Designing-framework-to-support-remote-and-local-actors-transparently.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-default.min.css">
+<link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-2.1.0.min.css" />
   </head>
 <body>
 <div dir="ltr" style="text-align: left;" trbidi="on">
