--- a/Simple-thoughts-on-Monads-in-Scala.html
+++ b/Simple-thoughts-on-Monads-in-Scala.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-default.min.css">
+<link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-2.1.0.min.css" />
   </head>
 <body>
   <i>A usual question in Scala interviews is about monads. A specific question I was asked was whether you can mix different types of monads inside one for comprehension. I had never thought about whether that makes sense or not. After that interview I repeatedly thought about it, and I want to write about it here.&nbsp;</i><br />
