--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-<link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-2.1.0.min.css" />
+<link rel="stylesheet" href="./css/main.css" />
   </head>
 <body>
 <h1>Making Legacy Concurrent</h1>
