--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-<link rel="stylesheet" href="./css/main.css" />
+<!-- <link rel="stylesheet" href="./css/main.css" /> -->
+		<title>Dockmeh - Making legacy concurrent</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Software engineering experts in distributed systems and program correctness">
+        <meta name="robots" content="INDEX,FOLLOW">
+        <meta name="GOOGLEBOT" content="INDEX,FOLLOW">
   </head>
 <body>
 <h1>Making Legacy Concurrent</h1>
