add buttons and max width

--- a/index.html
+++ b/index.html
@@ -3,17 +3,48 @@
   <head>
 <!-- <link rel="stylesheet" href="./css/main.css" /> -->
 		<title>Dockmeh - Making legacy concurrent</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
         <meta name="description" content="Software engineering experts in distributed systems and program correctness">
         <meta name="robots" content="INDEX,FOLLOW">
         <meta name="GOOGLEBOT" content="INDEX,FOLLOW">
+
+        <style>
+        	div.content { width: 960px }
+
+.button_block {
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: #e3ffcf;
+  color: blue;
+  padding: 14px 28px;
+  margin-top: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.button_block:hover {
+  background-color: #bcff8c;
+  color: black;
+}
+</style>
+
   </head>
 <body>
+	  <div class="content">
+
 <h1>Making Legacy Concurrent</h1>
-  <ul>
-    <li> <a href="Designing-framework-to-support-remote-and-local-actors-transparently.html">Designing a framework to support remote and local actors transparently. </a>
-    <li> <a href="actors-vs-executors.html">Actors vs. Executors in Java</a>
-    <li> <a href="how-to-hide-sensitive-data-in-logs.html">How to hide sensitive information (like passwords) in plain-text logs</a>
-  </ul>
+  
+  <button class="button_block">
+   <a href="Designing-framework-to-support-remote-and-local-actors-transparently.html">Designing a framework to support remote and local actors transparently. </a>
+   </button>
+  <button class="button_block">
+     <a href="actors-vs-executors.html">Actors vs. Executors in Java</a>
+   </button>
+  <button class="button_block">
+     <a href="how-to-hide-sensitive-data-in-logs.html">How to hide sensitive information (like passwords) in plain-text logs</a>
+   </button>
+  </div>
 </body>
 </html>
