--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="GOOGLEBOT" content="INDEX,FOLLOW">
 
         <style>
-        	div.content { width: 960px }
+        	div.content { max-width: 960px }
 
 .button_block {
   display: block;
