--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
   background-color: #bcff8c;
   color: black;
 }
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
 </style>
 
   </head>
@@ -45,6 +53,11 @@
   <button class="button_block">
      <a href="how-to-hide-sensitive-data-in-logs.html">How to hide sensitive information (like passwords) in plain-text logs</a>
    </button>
+  </div>
+
+  <div class="footer">
+  	<hr />
+  	KvK Number:  65354346 - BTW Number: NL002455714B97 - dockmeh@gmail.com
   </div>
 </body>
 </html>
