--- a/index.html
+++ b/index.html
@@ -1,95 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-<!-- <link rel="stylesheet" href="./css/main.css" /> -->
-		<title>Dockmeh - Making legacy concurrent</title>
-		<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
-        <meta name="description" content="Software engineering experts in distributed systems and program correctness">
-        <meta name="robots" content="INDEX,FOLLOW">
-        <meta name="GOOGLEBOT" content="INDEX,FOLLOW">
-
-        <style>
-        	
-        	div.content { 
-        		display: flex;
-  				flex-flow: column;
-        		max-width: 960px;
-        		flex: auto;
-        		background-color: #fffbf2;
-        		height: 100vh;
-        	}
-
-.button_block {
-	align-self: center;
-  display: block;
-  width: 90%;
-  border: none;
-  background-color: #e3ffcf;
-  color: blue;
-  padding: 14px 28px;
-  margin-top: 10px;
-  font-size: 16px;
-  cursor: pointer;
-  text-align: center;
-}
-
-.button_block:hover {
-  background-color: #bcff8c;
-  color: black;
-}
-
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-  background-color: #ebeae8;
-  padding: 10px;
-}
-
-.lpage {
-	display: none;
-}
-
-@media only screen and (min-width: 768px) {
-	.lpage {
-		display: block;
-		width: 15%;
-	}	
-}
-
-.page {
-	display: flex;
-	flex-wrap: row;
-}
-</style>
-
-  </head>
-<body>
+<head>
+	<link rel="stylesheet" href="./css/main.css" />
+	<title>Dockmeh Consultancy - Make Software Great</title>
+	<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
+	<meta name="description" content="Freelance fullstack software engineering experts in distributed systems, quality software and data engineering">
+	<meta name="robots" content="INDEX,FOLLOW">
+	<meta name="GOOGLEBOT" content="INDEX,FOLLOW">
+</head>
+<body class="body">
 	<div class="page">
-	<div class="lpage"></div>
-	  <div class="content">
+		<div class="lpage"></div>
+		<div class="content">
 
-<h1 style="margin-left: 15px;margin-right: 15px">Making Legacy Concurrent</h1>
-  
-  <button class="button_block">
-   <a href="Designing-framework-to-support-remote-and-local-actors-transparently.html">Designing a framework to support remote and local actors transparently. </a>
-   </button>
-  <button class="button_block">
-     <a href="actors-vs-executors.html">Actors vs. Executors in Java</a>
-   </button>
-  <button class="button_block">
-     <a href="how-to-hide-sensitive-data-in-logs.html">How to hide sensitive information (like passwords) in plain-text logs</a>
-   </button>
-  </div>
+			<h1>Dockmeh Consultancy<br/> <span style="font-size: large">Make Software Great (again)</span> </h1>
+			
+				Are you planning to make new software and want it to be high quality, fast and data-driven? 
+				Or do you want to make your old or legacy software great again? 
+				We can help you. We are freelance software engineers expert in various fields:
+				<ul>
+					<li>Distributed systems: from highly concurrent monoliths to microservice architectures</li>
+					<li>Quality software: best practices in testing and software verification</li>
+					<li>Data science and engineering: stream your data and have your system learn from it</li>
+					<li>Full stack: from optimized backend to SEO-friendly frontend</li>
+				</ul>
+			
+				Please contact us at: dockmeh-at-gmail-dot-com
 
-  	<div class="lpage"></div>
+			<h2>Engineering Blog</h2>
+			<div class="button_group">
+				<div class="button_block">
+					<a href="Designing-framework-to-support-remote-and-local-actors-transparently.html">Designing a framework to support remote and local actors transparently. </a>
+				</div>
+				<div class="button_block">
+					<a href="actors-vs-executors.html">Actors vs. Executors in Java</a>
+				</div>
+				<div class="button_block">
+					<a href="how-to-hide-sensitive-data-in-logs.html">How to hide sensitive information (like passwords) in plain-text logs</a>
+				</div>
+			</div>
+		</div>
 
-</div>
+		<div class="lpage"></div>
 
-  <div class="footer">
-  	KvK Number:  65354346 - BTW Number: NL002455714B97 - dockmeh@gmail.com
-  </div>
+	</div>
+
+	<div class="footer">
+		KvK Number:  65354346 - BTW Number: NL002455714B97 - dockmeh-at-gmail-dot-com
+	</div>
 </body>
 </html>
