--- a/how-to-hide-sensitive-data-in-logs.html
+++ b/how-to-hide-sensitive-data-in-logs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="./css/main.css" />
-	<title>Dockmeh Consultancy - Make Software Great</title>
+	<title>Dockmeh Consultancy - Freelance Data & Software Engineers</title>
 	<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
 	<meta name="description" content="Freelance fullstack software engineering experts in distributed systems, quality software and data engineering">
 	<meta name="robots" content="INDEX,FOLLOW">
