--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
 			<h2>Engineering Blog</h2>
 			<div class="button_group">
-				<div class="button_block">
-					<a href="Designing-framework-to-support-remote-and-local-actors-transparently.html">Designing a framework to support remote and local actors transparently. </a>
-				</div>
-				<div class="button_block">
-					<a href="actors-vs-executors.html">Actors vs. Executors in Java</a>
-				</div>
-				<div class="button_block">
-					<a href="how-to-hide-sensitive-data-in-logs.html">How to hide sensitive information (like passwords) in plain-text logs</a>
-				</div>
+				<a href="Designing-framework-to-support-remote-and-local-actors-transparently.html" class="button_block">
+						A Java framework with support for remote and local actors 
+				</a>
+				<a href="how-to-hide-sensitive-data-in-logs.html" class="button_block">
+						Hide sensitive information and passwords in plain-text logs
+				</a>
+				<a href="actors-vs-executors.html" class="button_block">
+						Actors vs. Executors in Java: tasks, continuations and futures
+				</a>
 			</div>
 		</div>
 
