--- a/Designing-framework-to-support-remote-and-local-actors-transparently.html
+++ b/Designing-framework-to-support-remote-and-local-actors-transparently.html
@@ -27,9 +27,8 @@
 				<li>Remote actors have no queue, but they do have their full implementation available. This allows proper type checking of messages being sent to them.</li>
 				<li>To model such distributed systems, the idea is to use deployment components offered by the ABS modeling language (see <a href="http://abs-models.org/chapter/modeling-deployment-architectures-in-abs/" rel="nofollow">here</a>).&nbsp;</li>
 			</ul>
-
-			</div>
 		</div>
+		<div class="lpage"></div>
 	</div>
 
 	<div class="footer">
