--- a/Simple-thoughts-on-Monads-in-Scala.html
+++ b/Simple-thoughts-on-Monads-in-Scala.html
@@ -24,7 +24,7 @@
 			Well, in Scala we have different sorts of monads. But obviously, they all do share the same characteristic of <i>being a container</i>. Imagine you buy a gift and put it in a box, then wrap in gift paper. Then you put a few such gifts into another bigger box to be able to post them together. In the end, the gift itself (or all the gifts) is what matters and all those boxes and wrap paper are serving that purpose.
 
 		</div>
-
+		<div class="lpage"></div>
 	</div>
 	<div class="footer">
 		KvK Number:  65354346 - BTW Number: NL002455714B97 - dockmeh-at-gmail-dot-com
