--- a/actors-vs-executors.html
+++ b/actors-vs-executors.html
@@ -189,6 +189,7 @@
 			There must be a global hash table, mapping every future to the set of actors that are awaiting on its completion. When a future completes (basically when a method finishes), the current actor looks up this future in this hash table, and sends a special `enable` method to all awaiting actors, and this method takes the future as the parameter. On the other side, every actor puts the messages awaiting a future into a special queue of suspended messages. The `enable` method takes the message waiting in this future and puts them to the default queue of enabled messages. Note that the messages awaiting on boolean conditions, are in separate queues as we discussed in the previous post.
 		</div>
 
+		<div class="lpage"></div>
 
 	</div>
 
